<resources>
    <string name="app_name">Fitness</string>
    <string name="title_news">news</string>
    <string name="title_core">Core</string>
    <string name="title_forum">Forum</string>
    <string name="title_mine">Mine</string>

    <string name="title_new_post">New post</string>
    <string name="toast_new_post_success">You have created a new post!</string>
    <string name="hint_new_post_title">Please input title here.</string>
    <string name="hint_new_post_content">Please input content here.</string>
    <string name="title_post">post</string>

    <string name="warning_not_sign_in">Not signed in! Please sign in first.</string>
    <string name="button_sign_in">Sign in</string>
    <string name="hint_sign_username">Please input username here.</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_sign_up_link">No account yet? Create one</string>
    <string name="hint_sign_password">Please input password here.</string>
    <string name="button_sign_out">Sign out</string>

    <string name="title_core_sport_recommend">Sport Recommend</string>
    <string name="title_core_meal_recommend">Meal Recommend</string>
    <string name="title_core_assessment">In 30-Day Assessment</string>

    <string name="title_core_no_physical_statistic_hint">No physical statistic!</string>
    <string name="title_physical_statistic">Physical statistic</string>
    <string name="button_physical_statistic_link">Go to make a physical statistic</string>
    <string name="title_set_physical_statistic">Set physical statistic</string>

    <string name="title_set_my_information">Set my information</string>
    <string name="title_set_my_info_avatar">Set avatar</string>
    <string name="title_set_my_info_nickname">Set nickname</string>
    <string name="title_set_my_info_personalized_signature">Set personalized signature</string>

    <string name="title_set_physical_statistic_height">Your height(cm):</string>
    <string name="title_set_physical_statistic_weight">Your weight(kg):</string>
    <string name="title_set_physical_statistic_heart_rate">Your heart rate(bpm):</string>
    <string name="title_set_physical_statistic_lung_capacity">Your lung capacity(ml):</string>
    <string name="submit">Submit</string>

    <string name="title_comment">Comment</string>

    <string name="hint_set_physical_statistic_complete">You have been created a new physical statistic record.</string>

    <string name="unknown_error">Unknown error</string>

    <string name="title_sport_recommend">Sport recommend</string>
    <string name="hint_new_recommend">We have been recommend a new thing to you! Do you like it?</string>

    <string name="title_meal_recommend">Meal recommend</string>
    <string name="title_meal_scan">Meal scan</string>

    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="from_camera">From camera</string>
    <string name="from_file_system">From file system</string>

    <string name="title_upload_completed_exercise">Upload completed exercise</string>
    <string name="hint_upload_completed_exercise_complete">You have been upload a new exercise record.</string>
    <string name="hint_upload_meal_complete">You have been upload your meal.</string>

    <string name="toast_new_comment_success">You have created a new comment!</string>


</resources>
