<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_sign_username"
            android:textColor="@color/text_level1_color"
            android:textSize="22dp"
            tools:text="Laugh laugh" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:hint="@string/hint_sign_password"
            android:textColor="@color/text_level1_color"
            android:textSize="22dp"
            tools:text="Laugh laugh" />

        <TextView
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/button_sign_up"
            android:textColor="@color/window_background_color" />

    </LinearLayout>

</FrameLayout>